Form Url generated on Creating Form

--- a/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.html
+++ b/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.html
@@ -1,63 +1,97 @@
 <p>form-edit works!</p>
-<form [formGroup]="dynamicForm" (ngSubmit)="onAddInputElement()" >
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Enter Your Question</label>
-        <input class="form-control" type="text" placeholder="enter your question" placeholder="enter your question" formControlName="question">
+<form [formGroup]="dynamicForm" (ngSubmit)="onAddInputElement()">
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Enter Your Question</label>
+    <input
+      class="form-control"
+      type="text"
+      placeholder="enter your question"
+      placeholder="enter your question"
+      formControlName="question"
+    />
+  </div>
+
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Select Response Type</label>
+    <select
+      class="form-control"
+      id="exampleFormControlSelect1"
+      formControlName="type"
+    >
+      <option selected>Select Type of Input</option>
+      <option *ngFor="let type of inputTypes">{{ type }}</option>
+    </select>
+  </div>
+  <div
+    formArrayName="options"
+    *ngIf="this.dynamicForm.get('type').value !== 'paragraph'"
+  >
+    <button (click)="onAddOption()" type="button">Add Option</button>
+    <div
+      *ngFor="
+        let controls of dynamicForm.get('options')['controls'];
+        let i = index
+      "
+    >
+      <label for="option{{ i }}">Option {{ i + 1 }}</label>
+      <input type="text" placeholder="enter option" [formControlName]="i" />
     </div>
-    
-    <div class="form-group">
-        <label for="exampleFormControlSelect1">Select Response Type</label>
-        <select class="form-control" id="exampleFormControlSelect1" formControlName="type">
-            <option selected>Select Type of Input</option>
-          <option *ngFor="let type of inputTypes">{{type}}</option>
-        
-        </select>
-    </div>
-        <div formArrayName="options" *ngIf="this.dynamicForm.get('type').value !=='paragraph' ">
-        
-            <button (click)="onAddOption()" type="button">Add Option</button>
-            <div *ngFor="let controls of dynamicForm.get('options')['controls']; let i = index">
-                <label for="option{{i}}">Option {{i+1}}</label>
-                <input type="text" placeholder="enter option" [formControlName]="i">
-            </div>
-        </div>
-      
-      <button class="btn btn-primary" type="submit">Add</button>
-    
-   
+  </div>
+
+  <button class="btn btn-primary" type="submit">Add</button>
 </form>
 
-<form #surveyForm = ngForm (onSubmit)="onSubmitSurveyForm()" >
-    <div *ngFor="let input of dynamicInputs; let i=index">
-        <div *ngIf="input.type==='paragraph'"class="form-group">
-            <label for="paragraph{{i}}">{{input.label}}</label>
-            <input class="form-control" type="text" placeholder="Enter response" name="question{{i}}" ngModel >
+<form #surveyForm="ngForm" (ngSubmit)="onSubmitSurveyForm(surveyForm)">
+  <div *ngFor="let input of dynamicInputs; let i = index">
+    <div *ngIf="input.type === 'paragraph'" class="form-group">
+      <label for="paragraph{{ i }}">{{ input.label }}</label>
+      <input
+        class="form-control"
+        type="text"
+        placeholder="Enter response"
+        name="question{{ i }}"
+        ngModel
+      />
+    </div>
+    <div class="form-group form-check" *ngIf="input.type === 'checkbox'">
+      <label for="checkboxQuestion{{ i }}">{{ input.label }}</label>
+
+      <div *ngFor="let option of input.options; let j = index">
+        <input
+          type="checkbox"
+          class="form-check-input"
+          id="exampleCheck{{ j }}"
+        />
+        <label class="form-check-label" for="exampleCheck{{ j }}">{{
+          option
+        }}</label>
+      </div>
+    </div>
+    <div *ngIf="input.type === 'radio'">
+      <label for="radioButtonQuestion">{{ input.label }}</label>
+      <div *ngFor="let option of input.options; let z = index">
+        <div class="radio">
+          <label for="radioButtonOption{{ z }}"
+            ><input
+              type="radio"
+              name="optradio"
+              id="radioButtonOption{{ z }}"
+              checked
+            />{{ option }}</label
+          >
         </div>
-        <div class="form-group form-check" *ngIf="input.type==='checkbox'">
-            <label for="checkboxQuestion{{i}}">{{input.label}}</label>
-            
-            <div *ngFor="let option of input.options;let j=index">
-                <input type="checkbox" class="form-check-input" id="exampleCheck{{j}}">
-                <label class="form-check-label" for="exampleCheck{{j}}">{{option}}</label>
-                
-            </div>
-           
-        </div>
-        <div *ngIf="input.type==='radio'">
-        <label for="radioButtonQuestion">{{input.label}}</label>
-        <div *ngFor="let option of input.options;let z=index">
-            <div class="radio">
-                <label for="radioButtonOption{{z}}"><input type="radio" name="optradio" id="radioButtonOption{{z}}" checked>{{option}}</label>
-              </div>
-        </div>
-        </div>
-        <div *ngIf="input.type==='select'">
-            <label for="selectInputQuestion">{{input.label}}</label>
-            <select class="form-control" id="exampleFormControlSelect{{i}}" >
-                <option selected>Select Type of Input</option>
-              <option *ngFor="let option of input.options" value="option">{{option}}</option>
-            
-            </select>
-        </div>
-        </div>
+      </div>
+    </div>
+    <div *ngIf="input.type === 'select'">
+      <label for="selectInputQuestion">{{ input.label }}</label>
+      <select class="form-control" id="exampleFormControlSelect{{ i }}">
+        <option selected>Select Type of Input</option>
+        <option *ngFor="let option of input.options" value="option">{{
+          option
+        }}</option>
+      </select>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary" >Save</button>
 </form>
+
