--- a/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.html
+++ b/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.html
@@ -1,13 +1,17 @@
-<p>form-edit works!</p>
-<form [formGroup]="dynamicForm" (ngSubmit)="onAddInputElement()">
+
+<form class="dynamicForm" [formGroup]="dynamicForm" (ngSubmit)="onAddInputElement()">
+  <div *ngIf="dynamicInputs.length<1" class="form-group">
+    <label for="formname">Enter From Name</label>
+    <input type="text" class="form-control" placeholder="enter Form Name" formControlName="name">
+  </div>
   <div class="form-group">
     <label for="exampleFormControlSelect1">Enter Your Question</label>
     <input
       class="form-control"
       type="text"
       placeholder="enter your question"
-      placeholder="enter your question"
       formControlName="question"
+      
     />
   </div>
 
@@ -17,6 +21,7 @@
       class="form-control"
       id="exampleFormControlSelect1"
       formControlName="type"
+      
     >
       <option selected>Select Type of Input</option>
       <option *ngFor="let type of inputTypes">{{ type }}</option>
@@ -24,9 +29,10 @@
   </div>
   <div
     formArrayName="options"
-    *ngIf="this.dynamicForm.get('type').value !== 'paragraph'"
+    *ngIf="this.dynamicForm.get('type').value === 'radio' || this.dynamicForm.get('type').value==='checkbox' || this.dynamicForm.get('type').value==='select'"
   >
-    <button (click)="onAddOption()" type="button">Add Option</button>
+  <a style="cursor: pointer;" (click)="onAddOption()" ><fa-icon [icon]="faPencilRuler" class="fa-2x"></fa-icon></a>
+    <!-- <button  type="button">Add Option</button> -->
     <div
       *ngFor="
         let controls of dynamicForm.get('options')['controls'];
@@ -34,14 +40,18 @@
       "
     >
       <label for="option{{ i }}">Option {{ i + 1 }}</label>
-      <input type="text" placeholder="enter option" [formControlName]="i" />
+      <span style="display: flex;">
+        <input type="text" placeholder="enter option" [formControlName]="i"  />
+        <a style="cursor: pointer;" (click)="onDeleteOption(i)"><fa-icon [icon]="faTrashAlt" class="fa-1x"></fa-icon></a>
+      </span>
+   
     </div>
   </div>
 
   <button class="btn btn-primary" type="submit">Add</button>
 </form>
 
-<form #surveyForm="ngForm" (ngSubmit)="onSubmitSurveyForm(surveyForm)">
+<form class="surveyForm" #surveyForm="ngForm" (ngSubmit)="onSubmitSurveyForm(surveyForm)">
   <div *ngFor="let input of dynamicInputs; let i = index">
     <div *ngIf="input.type === 'paragraph'" class="form-group">
       <label for="paragraph{{ i }}">{{ input.label }}</label>
@@ -51,6 +61,9 @@
         placeholder="Enter response"
         name="question{{ i }}"
         ngModel
+        required
+        #paragraph="ngModel"
+        disabled
       />
     </div>
     <div class="form-group form-check" *ngIf="input.type === 'checkbox'">
@@ -61,6 +74,8 @@
           type="checkbox"
           class="form-check-input"
           id="exampleCheck{{ j }}"
+          ngModel
+          disabled
         />
         <label class="form-check-label" for="exampleCheck{{ j }}">{{
           option
@@ -76,7 +91,7 @@
               type="radio"
               name="optradio"
               id="radioButtonOption{{ z }}"
-              checked
+              disabled
             />{{ option }}</label
           >
         </div>
@@ -84,14 +99,17 @@
     </div>
     <div *ngIf="input.type === 'select'">
       <label for="selectInputQuestion">{{ input.label }}</label>
-      <select class="form-control" id="exampleFormControlSelect{{ i }}">
+      <select class="form-control" id="exampleFormControlSelect" name="SelectQuestion" disabled>
         <option selected>Select Type of Input</option>
-        <option *ngFor="let option of input.options" value="option">{{
+        <option *ngFor="let option of input.options" value="{{option}}">{{
           option
         }}</option>
       </select>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary" >Save</button>
+  <ng-template [ngIf]="dynamicInputs.length>0"
+    ><button type="submit" class="btn btn-primary" >Save</button>
+  </ng-template>
+  
 </form>
 
