--- a/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.css
+++ b/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-size: 1.3rem;
     color: honeydew;
+    position: relative;
 }
 .surveyForm{
     position: absolute;
@@ -26,3 +27,31 @@
     color: honeydew;
     
 }
+.lds-dual-ring {
+    position: absolute;
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    bottom: 80px;
+    right:250px;
+    z-index: 10;
+  }
+  .lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+  }
+  @keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
