--- a/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.html
+++ b/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/form-edit.component.html
@@ -49,6 +49,7 @@
   </div>
 
   <button class="btn btn-primary" type="submit">Add</button>
+  <div *ngIf="addingInputElement" class="lds-dual-ring"></div>
 </form>
 
 <form class="surveyForm" #surveyForm="ngForm" (ngSubmit)="onSubmitSurveyForm(surveyForm)">
@@ -66,21 +67,19 @@
         disabled
       />
     </div>
-    <div class="form-group form-check" *ngIf="input.type === 'checkbox'">
-      <label for="checkboxQuestion{{ i }}">{{ input.label }}</label>
+    <div class="form-group form-check" *ngIf="input.type === 'date'">
+      <label for="DateQuestion">{{ input.label }}</label>
 
-      <div *ngFor="let option of input.options; let j = index">
+      
         <input
-          type="checkbox"
-          class="form-check-input"
-          id="exampleCheck{{ j }}"
+          type="date"
+          class="form-control"
+          id="DateQuestion"
           ngModel
           disabled
         />
-        <label class="form-check-label" for="exampleCheck{{ j }}">{{
-          option
-        }}</label>
-      </div>
+       
+    
     </div>
     <div *ngIf="input.type === 'radio'">
       <label for="radioButtonQuestion">{{ input.label }}</label>
