--- a/Forms_PROJECT_Angular/forms-management/src/app/form-list/form/form-view/form-view.component.html
+++ b/Forms_PROJECT_Angular/forms-management/src/app/form-list/form/form-view/form-view.component.html
@@ -16,24 +16,12 @@
             required
           />
         </div>
-        <div class="form-group form-check" *ngIf="input.type === 'checkbox'">
+        <div class="form-group" *ngIf="input.type === 'date'">
           <label for="checkboxQuestion{{ i }}">{{ input.label }}</label>
     
-          <div *ngFor="let option of input.options; let j = index">
-            <input
-              type="checkbox"
-              class="form-check-input"
-              id="exampleCheck{{ j }}"
-              name="checkbox{{j}}"
-              value="{{option}}"
-              ngModel
-            />
-  
-
-            <label class="form-check-label" for="exampleCheck{{ j }}">{{
-              option
-            }}</label>
-          </div>
+          <input matInput [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
         </div>
         <div *ngIf="input.type === 'radio'">
           <label for="radioButtonQuestion">{{ input.label }}</label>
