--- a/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/dialog-elements-example-dialog.html
+++ b/Forms_PROJECT_Angular/forms-management/src/app/form-list/form-edit/dialog-elements-example-dialog.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
+<h1 mat-dialog-title>Form URL</h1>
 <div mat-dialog-content>{{data.url}}</div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close (click)="onCloseDialog()">Close</button>
